--- a/Semana1/Dia5/02-estilos-externos.html
+++ b/Semana1/Dia5/02-estilos-externos.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Estilos Externos</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto recusandae doloremque sunt cum sapiente fugiat reprehenderit numquam iure, asperiores autem earum ex corrupti id magnam, obcaecati voluptas ea qui cumque.</p>
+    <ol>
+        <li>San Miguel</li>
+        <li>Santa Anita</li>
+    </ol>
 
     
 </body>
